--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.282",
     "less": "^4.2.1",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
@@ -18,6 +19,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.2.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
