--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@iconify/json": "^2.2.282",
+    "axios": "^1.7.9",
     "less": "^4.2.1",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
